--------------
my1sim85-0.2.5
--------------

Feature:
- state count (previous and total execution) information available

Update:
- n/a

Bugfix:
- [FIXED] led/swi linking method was flawed...
- [FIXED] reg & dev panels are gone once closed (no show panel option!)

Issues:
- still missing high-resolution timer (but not so bad on win32?)
- on win32-virtualbox-guestOS, setting linebreaks are +1 (click 1, set 2)

--------------
my1sim85-0.2.4
--------------

Update:
- n/a

Feature:
- n/a

Bugfix:
- [FIXED] miniviewers don't show up! apparently since 0.2.2!
- [FIXED] instruction xchg not simulated correctly! need copy constructor!
- [FIXED] code not reassembled if saved before restarting simulation

Issues:
- still missing high-resolution timer (but not so bad on win32?)
- on win32-virtualbox-guestOS, setting linebreaks are +1 (click 1, set 2)

--------------
my1sim85-0.2.3
--------------

Update:
- n/a

Feature:
- n/a

Bugfix:
- [FIXED] arithmetic operation involving carry in (was always 1)

Issues:
- still missing high-resolution timer (but not so bad on win32?)
- on win32-virtualbox-guestOS, setting linebreaks are +1 (click 1, set 2)

--------------
my1sim85-0.2.2
--------------

Update:
- welcome page can no longer be closed
- added build mode button on toolbar/menu

Feature:
- n/a

Bugfix:
- [FIXED] get address dialog didn't return properly when cancelled
- [FIXED] proc toolbar got enabled after system build is done
- [FIXED] log panel was not disabled in build mode

Issues:
- still missing high-resolution timer (but not so bad on win32?)
- on win32-virtualbox-guestOS, setting linebreaks are +1 (click 1, set 2)

--------------
my1sim85-0.2.1
--------------

Update:
- breakpoint setting during simulation

Feature:
- n/a

Bugfix:
- [FIXED] halt instruction was not handled properly
- [FIXED] miniviewer not browsed during update
- [FIXED] win32: no newline char in compiler output
- [FIXED] breakpoint (mouseclick) - was written for vbox testing...

Issues: